# typeahead

./: README.md  demo.mov  demo.py  pyproject.toml  words.txt
src/: main.py
src/lib/: skills.py  typeahead.py
tests/test_index_manager/: conftest.py  test_index_manager.py
